fix(byline): spacing
default p margin was being used in the byline, which stopped
the byline from centering vertically with the headshot image

--- a/src/components/pages/blog/byline.module.scss
+++ b/src/components/pages/blog/byline.module.scss
@@ -49,9 +49,14 @@
 
 .byline--small-margin--image {
   @extend .byline-base;
-  margin: 12px 0;
+  margin-top: 0;
 }
 
+.byline--small-margin--image {
+  p {
+    margin: 12px 0;
+  }
+}
 
 .one-line-byline {
   font-size: 16px;
